WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
253275
REGRESSION(
260512@main
): HDR images should be drawn directly if the destination context has HDR color space
https://bugs.webkit.org/show_bug.cgi?id=253275
Summary
REGRESSION(260512@main): HDR images should be drawn directly if the destinati...
Said Abou-Hallawa
Reported
2023-03-02 15:36:15 PST
When playing some HDR videos, RemoteMediaPlayerManagerProxy::bitmapImageForCurrentTime() may create a ShareableBitmap with HDR colorSpace which it gets it from MediaPlayer. In this case, the workaround in NativeImage::draw() will cause recursion. The workaround draws the HDR NativeImage to a temporary ImageBuffer. This temporary ImageBuffer will have HDR colorSpace also because it will match the colorSpace of destinationContext which is the colorSpace of MediaPlayer. When we call ImageBuffer::draw(), a temporary NativeImage will be created from this ImageBuffer. This NativeImage will have HDR colorSpace also. So when NativeImage::draw() is called from ImageBuffer::draw(), it will go through the workaround code path again. This will cause an infinite recursion.
Attachments
Add attachment
proposed patch, testcase, etc.
Said Abou-Hallawa
Comment 1
2023-03-02 15:37:34 PST
rdar://106055782
Said Abou-Hallawa
Comment 2
2023-03-02 15:50:49 PST
Pull request:
https://github.com/WebKit/WebKit/pull/10970
Said Abou-Hallawa
Comment 3
2023-03-02 18:02:15 PST
rdar://106017462
EWS
Comment 4
2023-03-03 09:13:23 PST
Committed
261149@main
(9180e60fc30a): <
https://commits.webkit.org/261149@main
> Reviewed commits have been landed. Closing PR #10970 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug