Cherry-pick 841ab1df8b81. rdar://problem/106017462

Cherry-pick 9180e60fc30a. rdar://problem/106017462

        REGRESSION(260512@main): HDR images should be drawn directly if the destination context has HDR color space
        https://bugs.webkit.org/show_bug.cgi?id=253275
        rdar://106055782

        Reviewed by Simon Fraser.

        CoreGraphics should draw the HDR images directly to the destination context if
        it has HDR color space.

        ImageBuffer::draw() should call GraphicsContext::drawNativeImageInternal() to
        prevent the possible recursion from NativeImage::draw() to ImageBuffer::draw().

        * Source/WebCore/platform/graphics/GraphicsContext.h:
        * Source/WebCore/platform/graphics/ImageBuffer.cpp:
        (WebCore::ImageBuffer::draw):
        (WebCore::ImageBuffer::drawConsuming):
        * Source/WebCore/platform/graphics/cg/NativeImageCG.cpp:
        (WebCore::NativeImage::draw):

        Canonical link: https://commits.webkit.org/261149@main